# constant-string

./: .pre-commit-config.yaml  .prettierrc.json  Cargo.toml  LICENSE.md  README.md  deny.toml  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: lib.rs  serde.rs
